[gd_scene load_steps=4 format=3 uid="uid://d4kh15r6exv6"]

[ext_resource type="Script" path="res://Scripts/CombatSystem.gd" id="1_ehj7o"]
[ext_resource type="Script" path="res://Scripts/MinimalistCombatMain.gd" id="1_uqbvs"]
[ext_resource type="Script" path="res://Scripts/MinimalistCombatUI.gd" id="3_fhxcj"]

[node name="Main" type="Node2D"]
script = ExtResource("1_uqbvs")

[node name="CombatSystem" type="Node" parent="."]
script = ExtResource("1_ehj7o")

[node name="CombatUI" type="Control" parent="." node_paths=PackedStringArray("combat_system")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_fhxcj")
combat_system = NodePath("../CombatSystem")

[node name="PlayerContainer" type="VBoxContainer" parent="CombatUI"]
layout_mode = 0
offset_right = 395.0
offset_bottom = 265.0

[node name="EnemyContainer" type="VBoxContainer" parent="CombatUI"]
layout_mode = 0
offset_left = 653.0
offset_top = 5.0
offset_right = 1149.0
offset_bottom = 249.0

[node name="AbilityContainer" type="HBoxContainer" parent="CombatUI"]
layout_mode = 0
offset_left = 409.0
offset_top = 405.0
offset_right = 789.0
offset_bottom = 625.0

[node name="LogContainer" type="RichTextLabel" parent="CombatUI"]
layout_mode = 0
offset_left = 280.0
offset_top = 83.0
offset_right = 890.0
offset_bottom = 342.0

[node name="BackToSelectionButton" type="Button" parent="CombatUI"]
layout_mode = 0
offset_left = 982.0
offset_top = 573.0
offset_right = 1137.0
offset_bottom = 604.0
text = "Back to Selection"

[connection signal="pressed" from="CombatUI/BackToSelectionButton" to="." method="return_to_selection"]
